# effecto

./: CMakeLists.txt  README.md  main.cpp
filter/: tfilter.cpp  tfilter.h
gui/: gui.cpp  gui.h  tpage.cpp  tpage.h
gui/buttons/: tbuttons.cpp  tbuttons.h
gui/textboxes/: textbox.cpp  textbox.h
resources/: tcolors.h  tsample.h
